--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 POC/MOPP POC/MOPP POC.xcodeproj/project.xcworkspace/xcuserdata
 POC/MOPP POC/MOPP POC.xcodeproj/xcuserdata
+POC/MOPP POC/MOPP POC.xcworkspace/xcuserdata
+POC/MOPP POC/Pods
