--- a/MoppApp/MoppApp.xcodeproj/xcshareddata/xcschemes/MoppApp.xcscheme
+++ b/MoppApp/MoppApp.xcodeproj/xcshareddata/xcschemes/MoppApp.xcscheme
@@ -64,8 +64,8 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "OS_ACTIVITY_MODE"
-            value = "disable"
-            isEnabled = "NO">
+            value = "$(DEBUG_ACTIVITY_MODE)"
+            isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
       <AdditionalOptions>
