--- a/MoppApp/Podfile
+++ b/MoppApp/Podfile
@@ -19,7 +19,14 @@ end
 target 'MoppLib' do
   platform :ios, '9.0'
   project '../MoppLib/MoppLib.xcodeproj'
-
   pod 'MBProgressHUD', '~> 0.9.2'
 
+end
+
+target 'MoppLibTests' do
+  platform :ios, '9.0'
+  project '../MoppLib/MoppLib.xcodeproj'
+  pod 'MBProgressHUD', '~> 0.9.2'
+  pod 'OCMock'
+  
 end
