--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ POC/MOPP POC/MOPP POC.xcworkspace/xcuserdata
 POC/MOPP POC/Pods
 MoppApp/MoppApp/Localizations.h
 MoppApp/MoppApp/Localizations.m
+.DS_Store
