--- a/MoppLib/MoppLib/libdigidocpp/EstonianIDCard.iphoneos/etc/digidocpp/digidocpp.conf
+++ b/MoppLib/MoppLib/libdigidocpp/EstonianIDCard.iphoneos/etc/digidocpp/digidocpp.conf
@@ -10,7 +10,7 @@
     <!--<param name="signer.signatureDigestUri" lock="false">http://www.w3.org/2001/04/xmlenc#sha256</param>-->
 
     <!--PKCS#11 driver’s location, if not using default driver-->
-    <!--<param name="pkcs11.driver.path" lock="false">PKCS11_MODULE-NOTFOUND</param>-->
+    <!--<param name="pkcs11.driver.path" lock="false">/Library/EstonianIDCard/lib/esteid-pkcs11.so</param>-->
 
     <!--HTTP proxy settings, if needed-->
     <!--<param name="proxy.forceSSL" lock="false">false</param>-->
@@ -35,13 +35,14 @@
     <!--<param name="tsl.timeOut" lock="false">10</param>-->
 
     <!--Verify service settings-->
-    <!--<param name="verify.serivceUri" lock="false"></param>-->
+    <!--<param name="verify.serivceUri" lock="false">https://siva.eesti.ee/validate</param>-->
 
     <!-- OCSP responder url. Used for validating signing certificates and generating BDoc-TM signatures-->
     <!--<ocsp issuer="ESTEID-SK 2007">http://ocsp.sk.ee</ocsp>-->
     <!--<ocsp issuer="ESTEID-SK 2011">http://ocsp.sk.ee</ocsp>-->
     <!--<ocsp issuer="ESTEID-SK 2015">http://ocsp.sk.ee</ocsp>-->
     <!--<ocsp issuer="EID-SK 2011">http://ocsp.sk.ee</ocsp>-->
+    <!--<ocsp issuer="EID-SK 2016">http://ocsp.sk.ee</ocsp>-->
     <!--<ocsp issuer="KLASS3-SK 2010">http://ocsp.sk.ee</ocsp>-->
 
     <!--OCSP responder settings for test OCSP service-->
@@ -49,4 +50,5 @@
     <!--<ocsp issuer="TEST of ESTEID-SK 2015">http://demo.sk.ee/ocsp</ocsp>-->
     <!--<ocsp issuer="TEST of KLASS3-SK 2010">http://demo.sk.ee/ocsp</ocsp>-->
     <!--<ocsp issuer="TEST of EID-SK 2011">http://demo.sk.ee/ocsp</ocsp>-->
+    <!--<ocsp issuer="TEST of EID-SK 2016">http://demo.sk.ee/ocsp</ocsp>-->
 </configuration>
