--- a/MoppApp/Podfile
+++ b/MoppApp/Podfile
@@ -20,6 +20,7 @@ target 'MoppLib' do
   platform :ios, '9.0'
   project '../MoppLib/MoppLib.xcodeproj'
   pod 'MBProgressHUD', '~> 0.9.2'
+  pod 'SOAPEngine'
 
 end
 
