--- a/MoppApp/Podfile
+++ b/MoppApp/Podfile
@@ -12,7 +12,8 @@ target 'MoppApp' do
 
   pod 'MBProgressHUD', '~> 0.9.2'
   pod 'PureLayout', '~> 3.0.1'
-
+  pod 'Fabric'
+  pod 'Crashlytics'
 end
 
 
