--- a/MoppApp/MoppApp/Info.plist
+++ b/MoppApp/MoppApp/Info.plist
@@ -10,7 +10,9 @@
 	<array>
 		<dict>
 			<key>CFBundleTypeIconFiles</key>
-			<array/>
+			<array>
+				<string>digidoc.png</string>
+			</array>
 			<key>CFBundleTypeName</key>
 			<string></string>
 			<key>LSHandlerRank</key>
@@ -35,6 +37,20 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>2d09fce02bca92bd26f18824f9cb302f5ad625e3</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -56,19 +72,35 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>Fabric</key>
-	<dict>
-		<key>APIKey</key>
-		<string>2d09fce02bca92bd26f18824f9cb302f5ad625e3</string>
-		<key>Kits</key>
-		<array>
-			<dict>
-				<key>KitInfo</key>
-				<dict/>
-				<key>KitName</key>
-				<string>Crashlytics</string>
-			</dict>
-		</array>
-	</dict>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+				<string>public.bdoc</string>
+                <string>public.ddoc</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>digidoc container</string>
+			<key>UTTypeIdentifier</key>
+			<string>public.bdoc</string>
+			<key>UTTypeSize320IconFile</key>
+			<string>digidoc</string>
+			<key>UTTypeSize64IconFile</key>
+			<string>digidoc</string>
+			<key>UTTypeTagSpecification</key>
+            <dict>
+                <key>ee.ria.bdoc</key>
+                <string>bdoc</string>
+                <key>public.filename-extension</key>
+                <array>
+                    <string>bdoc</string>
+                    <string>asice</string>
+                    <string>ddoc</string>
+                </array>
+            </dict>
+		</dict>
+	</array>
 </dict>
 </plist>
