--- a/MoppApp/MoppApp.xcodeproj/xcshareddata/xcschemes/MoppApp Mobi.xcscheme
+++ b/MoppApp/MoppApp.xcodeproj/xcshareddata/xcschemes/MoppApp Mobi.xcscheme
@@ -42,7 +42,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "54A5724B1E82A48A0099BFAF"
@@ -50,7 +51,7 @@
             BlueprintName = "MoppAppMobi"
             ReferencedContainer = "container:MoppApp.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
