--- a/MoppApp/shareExtension/shareExtension.entitlements
+++ b/MoppApp/shareExtension/shareExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.ee.fob.digidoc.ee</string>
+		<string>group.ee.ria.digidoc.ios</string>
 	</array>
 </dict>
 </plist>
