Implemented importing files using document picker

--- a/MoppApp/MoppApp/Info.plist
+++ b/MoppApp/MoppApp/Info.plist
@@ -6,24 +6,6 @@
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
 	<string>RIA DigiDoc</string>
-	<key>CFBundleDocumentTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeIconFiles</key>
-			<array>
-				<string>digidoc_64.png</string>
-				<string>digidoc_320.png</string>
-			</array>
-			<key>CFBundleTypeName</key>
-			<string>Digidoc file</string>
-			<key>LSHandlerRank</key>
-			<string>Alternate</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>public.data</string>
-			</array>
-		</dict>
-	</array>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -37,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>2.0</string>
 	<key>CFBundleVersion</key>
-	<string>17</string>
+	<string>18</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -106,19 +88,19 @@
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
+            <key>UTTypeIdentifier</key>
+            <string>public.bdoc</string>
 			<key>UTTypeConformsTo</key>
 			<array>
 				<string>public.data</string>
 				<string>public.bdoc</string>
 				<string>public.ddoc</string>
 			</array>
-			<key>UTTypeDescription</key>
-			<string>digidoc container</string>
-			<key>UTTypeIdentifier</key>
-			<string>public.bdoc</string>
+            <key>UTTypeDescription</key>
+			<string>Digidoc container</string>
 			<key>UTTypeSize320IconFile</key>
 			<string>digidoc_320.png</string>
-			<key>UTTypeSize64IconFile</key>
+    		<key>UTTypeSize64IconFile</key>
 			<string>digidoc_64.png</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
