--- a/MoppApp/MoppApp/Info.plist
+++ b/MoppApp/MoppApp/Info.plist
@@ -141,5 +141,10 @@
 			</dict>
 		</dict>
 	</array>
+    <key>UISupportedExternalAccessoryProtocols</key>
+    <array>
+        <string>com.ftsafe.bR301</string>
+        <string>com.ftsafe.iR301</string>
+    </array>
 </dict>
 </plist>
