--- a/MoppLib/MoppLib/Info.plist
+++ b/MoppLib/MoppLib/Info.plist
@@ -20,5 +20,10 @@
 	<string>1</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
+    <key>UISupportedExternalAccessoryProtocols</key>
+    <array>
+        <string>com.ftsafe.bR301</string>
+        <string>com.ftsafe.iR301</string>
+    </array>
 </dict>
 </plist>
