Added minimumOSVersion to cdoc.framework

--- a/CryptoLib/CryptoLib/cdocFramework/cdoc.framework/Info.plist
+++ b/CryptoLib/CryptoLib/cdocFramework/cdoc.framework/Info.plist
@@ -33,5 +33,7 @@
 	<string></string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
+	<key>MinimumOSVersion</key>
+	<string>11.0</string>
 </dict>
 </plist>
