--- a/MoppLib/MoppLib/libdigidocpp/libdigidocpp.iphonesimulator/etc/digidocpp/digidocpp.conf
+++ b/MoppLib/MoppLib/libdigidocpp/libdigidocpp.iphonesimulator/etc/digidocpp/digidocpp.conf
@@ -26,7 +26,7 @@
     <!--<param name="pkcs12.disable" lock="false">false</param>-->
 
     <!--Time-stamping service settings-->
-    <!--<param name="ts.url" lock="false">http://tsa.sk.ee</param>-->
+    <!--<param name="ts.url" lock="false">http://dd-at.ria.ee/tsa</param>-->
 
     <!--TSL settings-->
     <!--<param name="tsl.autoupdate" lock="false">true</param>-->
