--- a/MoppApp/Podfile
+++ b/MoppApp/Podfile
@@ -10,7 +10,7 @@ platform :ios, '9.0'
 target 'MoppApp' do
   platform :ios, '9.0'
   project 'MoppApp.xcodeproj'
-
+  pod 'ScreenBlocker-iOS', :git => 'https://github.com/ChrisAllinson/ScreenBlocker-iOS.git'
   pod 'Fabric'
   pod 'Crashlytics'
 end
