MOPPIOS-714 - Ülemise tab bari värv ei vahetu vastavalt dark/light mode'ile
MOPPIOS-714 - Ülemise tab bari värv ei vahetu vastavalt dark/light mode'ile

--- a/MoppApp/MoppApp/Info.plist
+++ b/MoppApp/MoppApp/Info.plist
@@ -107,7 +107,7 @@
 		<string>armv7</string>
 	</array>
 	<key>UIStatusBarStyle</key>
-	<string>UIStatusBarStyleDefault</string>
+	<string>UIStatusBarStyleDarkContent</string>
 	<key>UISupportedExternalAccessoryProtocols</key>
 	<array>
 		<string>com.ftsafe.bR301</string>
