--- a/MoppApp/Podfile
+++ b/MoppApp/Podfile
@@ -10,8 +10,8 @@ platform :ios, '9.0'
 target 'MoppApp' do
   platform :ios, '9.0'
   project 'MoppApp.xcodeproj'
-  pod 'Fabric'
-  pod 'Crashlytics'
+  pod 'Firebase/Crashlytics'
+  pod 'Firebase/Analytics'
   pod 'SwiftyRSA'
   pod 'Zip'
 end
@@ -20,30 +20,30 @@ target 'MoppAppTestEnv' do
   platform :ios, '9.0'
   project 'MoppApp.xcodeproj'
 
-  pod 'Fabric'
-  pod 'Crashlytics'
+  pod 'Firebase/Crashlytics'
+  pod 'Firebase/Analytics'
   pod 'SwiftyRSA'
 end
 
 target 'MoppLib' do
   platform :ios, '9.0'
   project '../MoppLib/MoppLib.xcodeproj'
-  #pod 'Fabric'
-  #pod 'Crashlytics'
+  #pod 'Firebase/Crashlytics'
+  #pod 'Firebase/Analytics'
 end
 
 target 'MoppLibTestEnv' do
   platform :ios, '9.0'
   project '../MoppLib/MoppLib.xcodeproj'
-  #pod 'Fabric'
-  #pod 'Crashlytics'
+  #pod 'Firebase/Crashlytics'
+  #pod 'Firebase/Analytics'
 end
 
 target 'CryptoLib' do
     platform :ios, '9.0'
     project '../CryptoLib/CryptoLib.xcodeproj'
-    #pod 'Fabric'
-    #pod 'Crashlytics'
+    #pod 'Firebase/Crashlytics'
+    #pod 'Firebase/Analytics'
 end
 
 target 'MoppLibTests' do
@@ -56,6 +56,6 @@ end
 target 'SkSigningLib' do
     platform :ios, '9.0'
     project '../SkSigningLib/SkSigningLib.xcodeproj'
-    #pod 'Fabric'
-    #pod 'Crashlytics'
+    #pod 'Firebase/Crashlytics'
+    #pod 'Firebase/Analytics'
 end
