--- a/MoppApp/MoppApp/Info.plist
+++ b/MoppApp/MoppApp/Info.plist
@@ -9,6 +9,22 @@
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>application/x-cdoc</string>
+				<string>application/x-p12d</string>
+				<string>application/vnd.lt.archyvai.adoc-2008</string>
+				<string>application/x-ddoc</string>
+				<string>application/vnd.etsi.asic-s+zip</string>
+				<string>application/vnd.etsi.asic-e+zip</string>
+				<string>application/x-zip</string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string>application/vnd.etsi.asic-e+zip</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleTypeIconFiles</key>
 			<array>
 				<string>digidoc_64.png</string>
@@ -17,10 +33,11 @@
 			<key>CFBundleTypeName</key>
 			<string>Digidoc file</string>
 			<key>LSHandlerRank</key>
-			<string>Alternate</string>
+			<string>Owner</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>public.data</string>
+				<string>public.content</string>
 			</array>
 		</dict>
 	</array>
@@ -120,6 +137,7 @@
 			<key>UTTypeConformsTo</key>
 			<array>
 				<string>public.data</string>
+				<string>public.content</string>
 				<string>public.bdoc</string>
 				<string>public.ddoc</string>
 				<string>public.edoc</string>
@@ -130,13 +148,62 @@
 			<key>UTTypeDescription</key>
 			<string>digidoc container</string>
 			<key>UTTypeIconFiles</key>
-			<array/>
+			<array>
+				<string>digidoc_64.png</string>
+				<string>digidoc_320.png</string>
+			</array>
 			<key>UTTypeIdentifier</key>
 			<string>public.bdoc</string>
-			<key>UTTypeSize320IconFile</key>
-			<string>digidoc_320.png</string>
-			<key>UTTypeSize64IconFile</key>
-			<string>digidoc_64.png</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>com.apple.ostype</key>
+				<array>
+					<string></string>
+				</array>
+				<key>ee.ria.bdoc</key>
+				<string>bdoc</string>
+				<key>public.filename-extension</key>
+				<array>
+					<string>cdoc</string>
+					<string>adoc</string>
+					<string>bdoc</string>
+					<string>ddoc</string>
+					<string>edoc</string>
+					<string>asice</string>
+					<string>sce</string>
+					<string>asics</string>
+					<string>scs</string>
+				</array>
+				<key>public.mime-type</key>
+				<array>
+					<string>application/x-cdoc</string>
+					<string>application/x-p12d</string>
+					<string>application/vnd.lt.archyvai.adoc-2008</string>
+					<string>application/x-ddoc</string>
+					<string>application/vnd.etsi.asic-s+zip</string>
+					<string>application/vnd.etsi.asic-e+zip</string>
+					<string>application/x-zip</string>
+				</array>
+			</dict>
+		</dict>
+	</array>
+	<key>UTImportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+				<string>public.content</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>digidoc container</string>
+			<key>UTTypeIconFiles</key>
+			<array>
+				<string>digidoc_64.png</string>
+				<string>digidoc_320.png</string>
+			</array>
+			<key>UTTypeIdentifier</key>
+			<string>public.bdoc</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
 				<key>ee.ria.bdoc</key>
