--- a/MoppApp/MoppApp/Info.plist
+++ b/MoppApp/MoppApp/Info.plist
@@ -52,6 +52,21 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string>digidoc_1024</string>
+			<key>CFBundleURLName</key>
+			<string>ee.ria.digidoc</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>digidoc</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>17</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
